--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -20,6 +20,13 @@
     
 }
 
+.open-fleet-flex {
+    display: flex;
+    gap:3px;
+}
+
+
+
 
 .hero-heading {
     font-family: "Brygada 1918 Variable", sans-serif;
@@ -84,8 +91,17 @@
     font-size: 14px;
     border: none;
     border-radius: 15px;
+    transition: background-color 0.3s ease;
 
 }
+
+.open-fleet-btn:hover {
+    background-color: rgba(219, 169, 88, .9)
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+    opacity: 0;
+  }
 
 .hero-form {
     border: 1px solid #FFFFFF33;
@@ -110,6 +126,7 @@
     grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    z-index: 99;
     }
     
     .heading { grid-area: 1 / 1 / 2 / 2; }
@@ -159,6 +176,11 @@
     font-size: 14px;
     border: none;
     border-radius: 15px;
+    transition: background-color 0.3s ease;
+}
+
+.hero-form-btn:hover {
+    background-color: rgba(219, 169, 88, .9);
 }
 
 .hero-form-input {
@@ -220,3 +242,4 @@
 
 
 }
+
