create banner section and resposive hero (WIP)

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,8 +1,8 @@
 
 
 .header {
-    
-    display: flex;
+    /* display: flex; */
+    display: none;
     align-items: center;
     justify-content: space-between;
     background-color: black;
