--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,6 +1,6 @@
 
 .footer-section {
-    padding: 70px 0 40px;
+    padding: 70px 70px 40px;
 }
 
 a {
@@ -28,10 +28,10 @@ p {
         justify-content: center;
     
     }
-    .div3 { grid-area: 1 / 2 / 2 / 3; }
-    .div4 { grid-area: 1 / 3 / 2 / 4; }
-    .div5 { grid-area: 1 / 4 / 2 / 5; }
-    .div6 { grid-area: 1 / 5 / 2 / 6; }
+    .top-destination { grid-area: 1 / 2 / 2 / 3; }
+    .explore { grid-area: 1 / 3 / 2 / 4; }
+    .trending-rides { grid-area: 1 / 4 / 2 / 5; }
+    .get-in-touch { grid-area: 1 / 5 / 2 / 6; }
     .social { grid-area: 2 / 5 / 3 / 6; }
     .copyright { 
         
@@ -146,4 +146,78 @@ p span {
 
 .links p {
     font-size: 14px;
+}
+
+
+
+@media (max-width:768px) {
+    .parent {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(12, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        row-gap: 45px;
+        }
+        
+        .brand-tab { grid-area: 1 / 1 / 4 / 3; 
+                     display: flex;
+                    /* justify-content: center; */
+                    align-items: center;
+                    text-align: center;   }
+
+        .top-destination { grid-area: 4 / 1 / 7 / 2;}
+        .explore { grid-area: 4 / 2 / 7 / 3;}
+        .trending-rides { grid-area: 7 / 1 / 10 / 2; }
+        .get-in-touch { grid-area: 7 / 2 / 10 / 3; }
+        .legal { grid-area: 10 / 1 / 11 / 3;
+                 align-items: center;}
+        .social { grid-area: 11 / 1 / 12 / 3;
+                    align-items: center;
+                    justify-content: center; }
+
+        .copyright { grid-area: 12 / 1 / 13 / 3; 
+                     justify-content: center;
+                     align-items: center; }
+
+
+        .footer-section {
+           padding: 70px 23px 40px; 
+        }              
+        
+         
+}
+
+
+
+/* Mobile Display */
+
+
+@media (max-width:480px) {
+    .parent {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(30, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        text-align: center;
+        gap:25px;
+        }
+        
+        .brand-tab { grid-area: 1 / 1 / 4 / 2; }
+        .top-destination { grid-area: 4 / 1 / 7 / 2; }
+        .explore { grid-area: 7 / 1 / 10 / 2; }
+        .trending-rides { grid-area: 10 / 1 / 13 / 2; }
+        .get-in-touch { grid-area: 13 / 1 / 16 / 2; }
+        .legal  { grid-area: 16 / 1 / 19 / 2; }
+        .social { grid-area: 19 / 1 / 20 / 2; }
+        .copyright { grid-area: 20 / 1 / 21 / 2; } 
+        
+        .legal div {
+            flex-direction: column;
+            text-align: center;
+            gap:15px;
+        }
+        
+         
 }
