--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -134,6 +134,38 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     .paragraph { grid-area: 1 / 2 / 2 / 3; }
     .car-image { grid-area: 2 / 1 / 4 / 3; }
 
+
+
+@media (max-width:768px) {
+
+    .hero-content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        }
+        
+        .heading { grid-area: 1 / 1 / 2 / 2; }
+        .paragraph { grid-area: 1 / 2 / 2 / 3; }
+        .car-image { grid-area: 2 / 1 / 3 / 3; }
+
+
+        .hero-heading {
+            font-size: 54px;
+        }
+
+        .car-image {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .hero-car-image {
+            width: 90%;
+        }
+}    
+
 @media (max-width:480px) {
 
     .hero-content {
@@ -186,11 +218,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         }
 
         .hero-car-image {
-            width: 95%;
+            width: 90%;
         }
 
         .hero-form {
             width: 90%;
+            margin-top: 30px;
         }
 
         .hero-form-btn {
